
    o	The default graphics device in the GNOME interface was gtk,
	which is no longer in the base package. It is now X11.

    o	The print button on the toolbar of the GNOME graphics device
	did not work.

    o	The example code on the man page for TkWidgetcmds had not been
	updated after the change that made tkget (et al.) return
	tclObj objects, so the "Submit" button didn't work.


		CHANGES IN R VERSION 1.8.0


MACOS CHANGES

    o	As from this release there is only one R port for the
	Macintosh, which runs only on MacOS X.	(The `Carbon' port has
	been discontinued, and the `Darwin' port is part of the new
	version.)   The current version can be run either as a
	command-line application or as an `Aqua' console.  There is a
	`Quartz' device quartz(), and the download and installation of
	both source and binary packages is supported from the Aqua
	console.  Those CRAN and BioC packages which build under MacOS
	X have binary versions updated daily.


USER-VISIBLE CHANGES

    o	The defaults for glm.control(epsilon=1e-8, maxit=25) have been
	tightened: this will produce more accurate results, slightly
	slower.

    o	sub, gsub, grep, regexpr, chartr, tolower, toupper, substr,
	substring, abbreviate and strsplit now handle missing values
	differently from "NA".

    o	Saving data containing name space references no longer warns
	about name spaces possibly being unavailable on load.

    o	On Unix-like systems interrupt signals now set a flag that is
	checked periodically rather than calling longjmp from the
	signal handler.	 This is analogous to the behavior on Windows.
	This reduces responsiveness to interrupts but prevents bugs
	caused by interrupting computations in a way that leaves the
	system in an inconsistent state.  It also reduces the number
	of system calls, which can speed up computations on some
	platforms and make R more usable with systems like Mosix.


CHANGES TO THE LANGUAGE

    o	Error and warning handling has been modified to incorporate a