@@ -2,13 +2,15 @@
 #
 # ${R_HOME}/bin/BATCH
 
-revision='$Revision: 1.12 $'
+revision='$Revision: 1.13 $'
 version=`set - ${revision}; echo ${2}`
 version="R batch front end ${version}
 
-Copyright (C) 2000 The R Core Development Team.
+Copyright (C) 2000--2003 The R Core Development Team.
 This is free software; see the GNU General Public Licence version 2
 or later for copying conditions.  There is NO warranty."
+
+opts="--restore --save --no-readline --gui=none"
 
 usage="Usage: R CMD BATCH [options] infile [outfile]
 
@@ -24,11 +26,10 @@ Options:
 
 Further arguments starting with a '-' are considered as options as long
 as '--' was not encountered, and are passed on to the R process, which
-by default is started with '--restore --save --no-readline'.
+by default is started with '$opts'.
+See also help(BATCH) inside R;
 
 Report bugs to <r-bugs@r-project.org>."
-
-opts="--restore --save --no-readline --gui=none"
 
 while test -n "${1}"; do
   case ${1} in
@@ -37,7 +38,7 @@ while test -n "${1}"; do
     -v|--version)
       echo "${version}"; exit 0 ;;
     --min-vsize|--min-nsize|--max-vsize|--max-nsize|--vsize|--nsize)
-      # Deprecated ...
+      # Deprecated (hence not documented)...
       opts="${opts} ${1}=${2}"; shift 2 ;;
     --) shift; break ;;
     -*) opts="${opts} ${1}"; shift ;;
